[package]
edition = "2021"
name = "bot"
version = "0.1.3"

[dependencies]
eh2telegraph = {path = "../eh2telegraph"}

anyhow = "1"
clap = {version = "3", features = ["derive"]}
dptree = "0.1"
once_cell = "1"
regex = "1"
reqwest = {version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"]}
serde = {version = "1", features = ["derive"]}
singleflight-async = {version = "0.1", features = ["hardware-lock-elision"]}
teloxide = {version = "0.7", features = ["macros", "ctrlc_handler", "dispatching2", "auto-send"]}
time = {version = "0.3", features = ["local-offset", "std", "macros"]}
tokio = {version = "1", default-features = false, features = ["rt-multi-thread", "macros", "net", "sync", "time", "parking_lot"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["local-time", "parking_lot", "time"]}

[build-dependencies]
vergen = {version = "7", default_features = false, features = ["build", "cargo", "rustc"]}
